# habits_drf

./: .gitignore  db.sqlite3
PycharmProjects/Habits_DRF/: .env.sample  .gitignore  pyproject.toml
PycharmProjects/Habits_DRF/config/: settings.py
PycharmProjects/Habits_DRF/habits/: models.py  services.py  tasks.py  tests.py  views.py
PycharmProjects/Habits_DRF/habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habits_duration.py
PycharmProjects/Habits_DRF/users/migrations/: 0001_initial.py
PycharmProjects/hw_3/: .gitignore  pyproject.toml
catalog/: models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html
catalog/templates/catalog/: category_list.html  menu.html  product_detail.html  product_list.html  product_list_by_category.html
catalog/templatetags/: media_tags.py
hw3/: settings.py  urls.py
