[tool.poetry]
name = "habits-drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
djangorestframework = "^3.15.2"
rest-framework-simplejwt = "^0.0.2"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
redis = "^5.2.1"
requests = "^2.32.3"
coverage = "^7.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
